cmake_minimum_required(VERSION 3.26)
project(Algorithm_Hub)

set(CMAKE_CXX_STANDARD 23)

add_executable(Algorithm_Hub MergeSort.cpp
        Factorial.cpp
        "Binary Tree.cpp"
        QuickSort.cpp
        "Pixel Algorithm.cpp"
        "Hash Tables.cpp"
        "Graph Algorithms.cpp"
        "Dynamic Programming.cpp"
        "Binary Search.cpp"
        "Binary Insertion.cpp"
        "Binary Tree Check Symmetry.cpp"
        "Find Median Problem.cpp"
        "Apartment Problem- Hard/Brute Force.cpp"
        Test/Test.cpp
        "List of 75 problems/Merge Words Alternatively.cpp"
        "List of 75 problems/Greatest Common Divisor of Strings.cpp"
        "List of 75 problems/Kids With the Greatest Number of Candies.cpp"
        "List of 75 problems/Can Place Flowers.cpp"
        "List of 75 problems/Reverse Words in a String.cpp"
        "List of 75 problems/Product of Array Except Self.cpp"
        "List of 75 problems/Increasing Triplet Subsequence.cpp"
        "List of 75 problems/String Compression.cpp"
        "List of 75 problems/Move Zeroes.cpp"
        "List of 75 problems/SubSequence.cpp"
        "List of 75 problems/Container With Most Water.cpp"
        "List of 75 problems/Max Number of K-Sum Pairs.cpp"
        "List of 75 problems/Maximum Average Subarray I.cpp"
        "List of 75 problems/Maximum Number of Vowels in a Substring of Given Length.cpp"
        "List of 75 problems/Max Consecutive Ones III.cpp"
        "List of 75 problems/Longest Subarray of 1's After Deleting One Element.cpp"
        "List of 75 problems/Find Pivot Index.cpp"
        "List of 75 problems/Determine if Two Strings Are Close.cpp"
        "List of 75 problems/Equal Row and Column Pairs.cpp"
        "List of 75 problems/Removing Stars from a String.cpp"
        "List of 75 problems/Asteroids Problem.cpp"
        "List of 75 problems/Decode String.cpp"
        "List of 75 problems/Evaluate Reverse Polish Notation.cpp"
        "List of 75 problems/Number of Recent Calls.cpp"
        "List of 75 problems/Dota2 Senate.cpp"
        "List of 75 problems/Delete the Middle Node of a Linked List.cpp"
        "List of 75 problems/Odd Even Linked List.cpp"
        "List of 75 problems/Reverse Linked List.cpp"
        "List of 75 problems/Maximum Twin Sum of a Linked List.cpp"
        "List of 75 problems/Longest Palindromic Substring.cpp"
        "List of 75 problems/Longest Valid Parentheses.cpp"
        "List of 75 problems/Continuous Subarray Sum.cpp"
        "Sliding Window/DNA Sequence.cpp"
        "Sliding Window/Longest Substring with Atleast K Repeating Characters.cpp"
        "NeetCode 150/Duplicate Values.cpp"
        "NeetCode 150/Valid Anagram.cpp"
        "NeetCode 150/Two-Integer Sum.cpp"
        "NeetCode 150/Anagram Groups.cpp"
        "NeetCode 150/Top K Elements in List.cpp"
        "NeetCode 150/String Encode and Decode.cpp"
        "NeetCode 150/Valid Sudoku.cpp"
        "NeetCode 150/Longest Consecutive Sequence.cpp"
        "NeetCode 150/Product of Array Except Self.cpp"
        "NeetCode 150/Two Integer Sum II.cpp"
)
